--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <body>
     <div class="app container mt-5">
       <div class="row">
-        <div class="col-sm-6">
-          <h5>À l'EDJ, les étudiants travaillent de plus en plus</h5>
-          <p class="text-muted">Commits par mois (source: Pierre Romera).</p>
+        <div class="col-sm-4">
+          <h5>Le taux de chômage aux Etats-Unis</h5>
+          <p class="text-muted">Evolution du nombre de chômeurs de 2006 à 2017 (source : Bureau of Labor Statistics)</p>
           <line-chart :height="200" class="mt-3 mb-5"></line-chart>
         </div>
 
-        <div class="col-sm-6">
-          <h5>Afrique du Sud: 10 ans de hausse du braconnage</h5>
-          <p class="text-muted">Rhinoceros tués chaque année par le braconnage en Afrique du Sud (source: South African Government).</p>
+        <div class="col-8">
+          <h5>Le phishing par sms au Canada</h5>
+          <p class="text-muted">Nombre de victimes par province en 2016 (source : Canadian Anti-Fraud Centre)</p>
           <bar-chart :height="200" class="mt-3 mb-5"></bar-chart>
         </div>
 
         <div class="col-sm-12">
-          <h5>Le chômage sous François Hollande</h5>
-          <p class="text-muted">Evolution du nombre de chômeurs inscrits à Pôle emploi depuis mai 2012 en France métropolitaine (source: Ministère du Travail).</p>
+          <h5>Le taux de chômage aux Etats-Unis</h5>
+          <p class="text-muted">Evolution du nombre de chômeurs de 2006 à 2017 (source: Bureau of Labor Statistics).</p>
           <multiline-chart :height="200" class="mt-3 mb-5"></multiline-chart>
         </div>
 
@@ -38,6 +38,12 @@
           <p class="text-muted">Affaires de corruption en Ile-de-France (source: Transparency International)</p>
           <doughnut-chart :height="200" class="mt-3 mb-5"></doughnut-chart>
         </div>
+
+         <div class="col-8">
+          <h5>Trust in media reporting</h5>
+          <p class="text-muted">Source : Infratest dimap</p>
+          <multibar-chart :height="200" class="mt-3 mb-5"></multibar-chart>
+        </div>
       </div>
     </div>
 
@@ -50,6 +56,7 @@
     <script src="charts/line.js"></script>
     <script src="charts/multiline.js"></script>
     <script src="charts/bar.js"></script>
+    <script src="charts/multi-bar.js"></script>
     <script src="charts/pie.js"></script>
     <script src="charts/doughnut.js"></script>
     <script src="index.js"></script>
